--- a/llama/0_data_extract.ipynb
+++ b/llama/0_data_extract.ipynb
@@ -2864,7 +2864,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_output['question'] = 'Here is the question about software development. The title of the question is <Title>\"'+q_output['title'].map(str)+'\"</Title>. and body of the question is <Question>\"'+q_output['clean_body'].map(str)+'\"</Question>. Please answer briefly about the \"difficulty\" of the stackoverflow question'\n"
+    "q_output['question'] = 'Here is the question about software development. The title of the question is <Title>'+q_output['title'].map(str)+'</Title>. and body of the question is <Question>'+q_output['clean_body'].map(str)+'</Question>. Please answer briefly about the \"difficulty\" of the stackoverflow question'\n"
    ]
   },
   {
@@ -2874,339 +2874,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>question</th>\n",
-       "      <th>answer</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Advanced</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Advanced</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Advanced</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Advanced</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Advanced</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Advanced</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>Here is the question about software developmen...</td>\n",
-       "      <td>Difficulty class : Advanced</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                             question  \\\n",
-       "0   Here is the question about software developmen...   \n",
-       "1   Here is the question about software developmen...   \n",
-       "2   Here is the question about software developmen...   \n",
-       "3   Here is the question about software developmen...   \n",
-       "4   Here is the question about software developmen...   \n",
-       "5   Here is the question about software developmen...   \n",
-       "6   Here is the question about software developmen...   \n",
-       "7   Here is the question about software developmen...   \n",
-       "8   Here is the question about software developmen...   \n",
-       "9   Here is the question about software developmen...   \n",
-       "10  Here is the question about software developmen...   \n",
-       "11  Here is the question about software developmen...   \n",
-       "12  Here is the question about software developmen...   \n",
-       "13  Here is the question about software developmen...   \n",
-       "14  Here is the question about software developmen...   \n",
-       "15  Here is the question about software developmen...   \n",
-       "16  Here is the question about software developmen...   \n",
-       "17  Here is the question about software developmen...   \n",
-       "18  Here is the question about software developmen...   \n",
-       "19  Here is the question about software developmen...   \n",
-       "20  Here is the question about software developmen...   \n",
-       "21  Here is the question about software developmen...   \n",
-       "22  Here is the question about software developmen...   \n",
-       "23  Here is the question about software developmen...   \n",
-       "24  Here is the question about software developmen...   \n",
-       "25  Here is the question about software developmen...   \n",
-       "26  Here is the question about software developmen...   \n",
-       "27  Here is the question about software developmen...   \n",
-       "28  Here is the question about software developmen...   \n",
-       "29  Here is the question about software developmen...   \n",
-       "30  Here is the question about software developmen...   \n",
-       "31  Here is the question about software developmen...   \n",
-       "32  Here is the question about software developmen...   \n",
-       "33  Here is the question about software developmen...   \n",
-       "34  Here is the question about software developmen...   \n",
-       "35  Here is the question about software developmen...   \n",
-       "36  Here is the question about software developmen...   \n",
-       "37  Here is the question about software developmen...   \n",
-       "38  Here is the question about software developmen...   \n",
-       "39  Here is the question about software developmen...   \n",
-       "40  Here is the question about software developmen...   \n",
-       "41  Here is the question about software developmen...   \n",
-       "42  Here is the question about software developmen...   \n",
-       "\n",
-       "                             answer  \n",
-       "0       Difficulty class : Advanced  \n",
-       "1   Difficulty class : Intermediate  \n",
-       "2   Difficulty class : Intermediate  \n",
-       "3   Difficulty class : Intermediate  \n",
-       "4   Difficulty class : Intermediate  \n",
-       "5   Difficulty class : Intermediate  \n",
-       "6   Difficulty class : Intermediate  \n",
-       "7   Difficulty class : Intermediate  \n",
-       "8   Difficulty class : Intermediate  \n",
-       "9       Difficulty class : Advanced  \n",
-       "10         Difficulty class : Basic  \n",
-       "11  Difficulty class : Intermediate  \n",
-       "12  Difficulty class : Intermediate  \n",
-       "13  Difficulty class : Intermediate  \n",
-       "14  Difficulty class : Intermediate  \n",
-       "15  Difficulty class : Intermediate  \n",
-       "16  Difficulty class : Intermediate  \n",
-       "17  Difficulty class : Intermediate  \n",
-       "18  Difficulty class : Intermediate  \n",
-       "19  Difficulty class : Intermediate  \n",
-       "20      Difficulty class : Advanced  \n",
-       "21         Difficulty class : Basic  \n",
-       "22  Difficulty class : Intermediate  \n",
-       "23         Difficulty class : Basic  \n",
-       "24  Difficulty class : Intermediate  \n",
-       "25         Difficulty class : Basic  \n",
-       "26  Difficulty class : Intermediate  \n",
-       "27      Difficulty class : Advanced  \n",
-       "28  Difficulty class : Intermediate  \n",
-       "29  Difficulty class : Intermediate  \n",
-       "30  Difficulty class : Intermediate  \n",
-       "31         Difficulty class : Basic  \n",
-       "32  Difficulty class : Intermediate  \n",
-       "33  Difficulty class : Intermediate  \n",
-       "34      Difficulty class : Advanced  \n",
-       "35         Difficulty class : Basic  \n",
-       "36         Difficulty class : Basic  \n",
-       "37  Difficulty class : Intermediate  \n",
-       "38         Difficulty class : Basic  \n",
-       "39  Difficulty class : Intermediate  \n",
-       "40         Difficulty class : Basic  \n",
-       "41      Difficulty class : Advanced  \n",
-       "42      Difficulty class : Advanced  "
+       "'&quot;'"
       ]
      },
      "execution_count": 27,
@@ -3215,7 +2884,7 @@
     }
    ],
    "source": [
-    "q_output[['question', 'answer']]"
+    "'&quot;'"
    ]
   },
   {
@@ -3224,12 +2893,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_output[['id', 'question', 'answer']].to_csv('../../data/part_one_q_output.csv')"
+    "import re\n",
+    "q_output['question'] = q_output['question'].apply(lambda x:  re.sub(r\";(?=\\S)\", \"\", x))\n",
+    "# .str.replace('\";', \"\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_output[['id', 'question', 'answer']].to_csv('../../data/part_one_q_output.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3239,12 +2919,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# q_output.iloc[[14, 25, 13, 21], :].to_csv('chk.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
