--- a/complexity/4_cognitive_complexity_discontinuity.ipynb
+++ b/complexity/4_cognitive_complexity_discontinuity.ipynb
@@ -1233,7 +1233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_stackoverflow_src",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
