--- a/complexity/4_cognitive_complexity_discontinuity.ipynb
+++ b/complexity/4_cognitive_complexity_discontinuity.ipynb
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1091,8 @@
     "F_stat, p_value = chow_test_with_plot(chow_df[chow_df['rel_days']>=-365], split_point)\n",
     "\n",
     "print(\"F-Statistic:\", F_stat)\n",
-    "print(\"p-value:\", p_value)\n"
+    "print(\"p-value:\", p_value)\n",
+    "# 111111"
    ]
   },
   {
