--- a/llama/0_data_extract.ipynb
+++ b/llama/0_data_extract.ipynb
@@ -2860,11 +2860,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_output['question'] = 'Here is the question about software development. The title of the question is <Title>'+q_output['title'].map(str)+'</Title>. and body of the question is <Question>'+q_output['clean_body'].map(str)+'</Question>. Please answer briefly about the \"difficulty\" of the stackoverflow question'\n"
+    "q_output['question'] = '<Title>'+q_output['title'].map(str)+'</Title>. <Question>'+q_output['clean_body'].map(str)+'</Question>'\n"
    ]
   },
   {
@@ -2936,7 +2936,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_stackoverflow_src",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
