--- a/LLM/2_calculate_acc.ipynb
+++ b/LLM/2_calculate_acc.ipynb
@@ -35,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_acc_condition(llm_model, few_shot_n, test_n, q_src_yn):\n",
-    "    opt_file =[x for x in file_list if x.startswith(f'{llm_model}_result_{few_shot_n}_{test_n}_{q_src_yn}')]\n",
-    "    print(opt_file)\n",
+    "def calc_acc_condition(llm_model, few_shot_n, test_n, q_src_yn, p_ver):\n",
+    "    opt_file = [x for x in file_list if x.startswith(f'{llm_model}_result_{few_shot_n}_{test_n}_{q_src_yn}')]\n",
+    "    opt_file = [x for x in opt_file if x.endswith(f'_{p_ver}.csv')]\n",
     "\n",
     "    if len(opt_file)>0 : \n",
     "        df = pd.DataFrame()\n",
@@ -66,33 +66,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c_result_2_10_N :  63.33333333333333\n",
-      "c_result_2_10_Y :  73.33333333333333\n",
-      "c_result_3_10_N :  60.0\n",
-      "c_result_3_10_Y :  60.0\n",
-      "l_result_1_10_N :  53.333333333333336\n",
-      "l_result_1_10_Y :  46.666666666666664\n",
-      "l_result_2_10_N :  76.0\n",
-      "l_result_2_10_Y :  72.0\n",
-      "l_result_3_10_N :  58.75\n",
-      "l_result_3_10_Y :  66.66666666666666\n"
+      "l_result_1_10_N :  59.0\n",
+      "l_result_1_10_Y :  66.0\n",
+      "l_result_2_10_N :  59.0\n",
+      "l_result_2_10_Y :  56.00000000000001\n",
+      "l_result_3_10_N :  51.0\n",
+      "l_result_3_10_Y :  56.00000000000001\n"
      ]
     }
    ],
    "source": [
-    "calc_acc_condition('c' , 2, 10, 'N')\n",
-    "calc_acc_condition('c' , 2, 10, 'Y')\n",
-    "calc_acc_condition('c' , 3, 10, 'N')\n",
-    "calc_acc_condition('c' , 3, 10, 'Y')\n",
-    "calc_acc_condition('l' , 1, 10, 'N')\n",
-    "calc_acc_condition('l' , 1, 10, 'Y')\n",
-    "calc_acc_condition('l' , 2, 10, 'N')\n",
-    "calc_acc_condition('l' , 2, 10, 'Y')\n",
-    "calc_acc_condition('l' , 3, 10, 'N')\n",
-    "calc_acc_condition('l' , 3, 10, 'Y')\n",
-    "calc_acc_condition('l' , 4, 10, 'N')\n",
-    "calc_acc_condition('l' , 4, 10, 'Y')\n"
+    "calc_acc_condition('c' , 2, 10, 'N', 'sys_prompt1')\n",
+    "calc_acc_condition('c' , 2, 10, 'Y', 'sys_prompt1')\n",
+    "calc_acc_condition('c' , 3, 10, 'N', 'sys_prompt1')\n",
+    "calc_acc_condition('c' , 3, 10, 'Y', 'sys_prompt1')\n",
+    "\n",
+    "\n",
+    "\n",
+    "calc_acc_condition('l' , 1, 10, 'N', 'sys_prompt1')\n",
+    "calc_acc_condition('l' , 1, 10, 'Y', 'sys_prompt1')\n",
+    "calc_acc_condition('l' , 2, 10, 'N', 'sys_prompt1')\n",
+    "calc_acc_condition('l' , 2, 10, 'Y', 'sys_prompt1')\n",
+    "calc_acc_condition('l' , 3, 10, 'N', 'sys_prompt1')\n",
+    "calc_acc_condition('l' , 3, 10, 'Y', 'sys_prompt1')\n",
+    "calc_acc_condition('l' , 4, 10, 'N', 'sys_prompt1')\n",
+    "calc_acc_condition('l' , 4, 10, 'Y', 'sys_prompt1')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l_result_1_10_N :  64.0\n",
+      "l_result_1_10_Y :  60.0\n",
+      "l_result_2_10_N :  63.0\n",
+      "l_result_2_10_Y :  66.0\n",
+      "l_result_3_10_N :  64.0\n",
+      "l_result_3_10_Y :  69.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "calc_acc_condition('c' , 2, 10, 'N', 'sys_prompt2')\n",
+    "calc_acc_condition('c' , 2, 10, 'Y', 'sys_prompt2')\n",
+    "calc_acc_condition('c' , 3, 10, 'N', 'sys_prompt2')\n",
+    "calc_acc_condition('c' , 3, 10, 'Y', 'sys_prompt2')\n",
+    "calc_acc_condition('l' , 1, 10, 'N', 'sys_prompt2')\n",
+    "calc_acc_condition('l' , 1, 10, 'Y', 'sys_prompt2')\n",
+    "calc_acc_condition('l' , 2, 10, 'N', 'sys_prompt2')\n",
+    "calc_acc_condition('l' , 2, 10, 'Y', 'sys_prompt2')\n",
+    "calc_acc_condition('l' , 3, 10, 'N', 'sys_prompt2')\n",
+    "calc_acc_condition('l' , 3, 10, 'Y', 'sys_prompt2')\n",
+    "calc_acc_condition('l' , 4, 10, 'N', 'sys_prompt2')\n",
+    "calc_acc_condition('l' , 4, 10, 'Y', 'sys_prompt2')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
